# llm-paper-retriever

./: .cursorrules  .gitignore  README.md  instruction.txt  pyproject.toml  single_query.jsonl
.cursor/: mcp.json
mcp/: arxiv_mcp_server.py  test_server.py
misc/: rouge-eval-lora-0-1k-train.csv
scripts/: finetune-llm.py  generate_llm_training_data.py  llm_inference.py
