[project]
name = "llm-paper-retriever"
version = "0.1.0"
description = "LLM-based research paper retrieval workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "arxiv>=2.2.0",
    "datasets>=3.5.1",
    "fastmcp>=2.2.3",
    "peft>=0.15.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
